--- a/angular/angular.json
+++ b/angular/angular.json
@@ -31,7 +31,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
