--- a/angular/package.json
+++ b/angular/package.json
@@ -21,8 +21,10 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "ngx-splide": "^7.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
