--- a/angular/package.json
+++ b/angular/package.json
@@ -24,6 +24,7 @@
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "ngx-pagination": "^6.0.3",
     "ngx-splide": "^7.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
